last.log
[[33mWarning [0m] Parallelism is disabled.
[[31m Error  [0m] Set.scala:42:46: error: value neq is not a member of uset.USet[T]
             def neq(that: Set[T]): Boolean = this.uset.neq(that.uset)
                                                        [31m^[0m
[[34m  Info  [0m] Cycle took 4086 ms
[[34m  Info  [0m] 
[[34m  Info  [0m] 
[[34m  Info  [0m] Waiting for source changes...
[[34m  Info  [0m] 
[[34m  Info  [0m] 
[[34m  Info  [0m] Detecting some file modifications...: /Users/rodamber/Workspace/LARA/automaton/Set.scala
[[34m  Info  [0m]  - Checking cache: 'adt invariant' VC for * @93:5...
[[34m  Info  [0m] Cache hit: 'adt invariant' VC for * @93:5...
[[34m  Info  [0m]  - Checking cache: 'adt invariant' VC for apply @13:32...
[[34m  Info  [0m] Cache hit: 'adt invariant' VC for apply @13:32...
[[34m  Info  [0m]  - Checking cache: 'adt invariant' VC for apply @14:28...
[[34m  Info  [0m] Cache hit: 'adt invariant' VC for apply @14:28...
[[34m  Info  [0m]  - Checking cache: 'match exhaustiveness' VC for unapply @18:54...
[[34m  Info  [0m] Cache hit: 'match exhaustiveness' VC for unapply @18:54...
[[34m  Info  [0m]  - Checking cache: 'adt invariant' VC for unapply @20:36...
[[34m  Info  [0m] Cache hit: 'adt invariant' VC for unapply @20:36...
[[34m  Info  [0m]  - Checking cache: 'postcondition' VC for sameRefl @121:5...
[[34m  Info  [0m] Cache hit: 'postcondition' VC for sameRefl @121:5...
[[34m  Info  [0m]  - Checking cache: 'precond. (call foldLeft[T, R](xs, f(z, x), f))' VC for foldLeft @144:29...
[[34m  Info  [0m] Cache hit: 'precond. (call foldLeft[T, R](xs, f(z, x), f))' VC for foldLeft @144:29...
[[34m  Info  [0m]  - Checking cache: 'lambda precondition' VC for foldLeft @141:25...
[[34m  Info  [0m] Cache hit: 'lambda precondition' VC for foldLeft @141:25...
[[34m  Info  [0m]  - Checking cache: 'match exhaustiveness' VC for foldLeft @142:5...
[[34m  Info  [0m] Cache hit: 'match exhaustiveness' VC for foldLeft @142:5...
[[34m  Info  [0m]  - Checking cache: 'lambda precondition' VC for foldLeft @144:41...
[[34m  Info  [0m] Cache hit: 'lambda precondition' VC for foldLeft @144:41...
[[34m  Info  [0m]  - Checking cache: 'precond. (call sameTrans[T](set1.uset, set2.uset, set3. ...)' VC for sameTrans @127:19...
[[34m  Info  [0m] Cache hit: 'precond. (call sameTrans[T](set1.uset, set2.uset, set3. ...)' VC for sameTrans @127:19...
[[34m  Info  [0m]  - Checking cache: 'postcondition' VC for sameTrans @124:73...
[[34m  Info  [0m] Cache hit: 'postcondition' VC for sameTrans @124:73...
[[34m  Info  [0m]  - Checking cache: 'precond. (call subsetTrans[T](set1, set2, set3))' VC for sameTrans @299:21...
[[34m  Info  [0m] Cache hit: 'precond. (call subsetTrans[T](set1, set2, set3))' VC for sameTrans @299:21...
[[34m  Info  [0m]  - Checking cache: 'precond. (call subsetTrans[T](set3, set2, set1))' VC for sameTrans @299:54...
[[34m  Info  [0m] Cache hit: 'precond. (call subsetTrans[T](set3, set2, set1))' VC for sameTrans @299:54...
[[34m  Info  [0m]  - Checking cache: 'postcondition' VC for sameTrans @296:76...
[[34m  Info  [0m] Cache hit: 'postcondition' VC for sameTrans @296:76...
[[34m  Info  [0m]  - Checking cache: 'precond. (call powerSet[T](x))' VC for powerSetSubset @443:5...
[[34m  Info  [0m] Cache hit: 'precond. (call powerSet[T](x))' VC for powerSetSubset @443:5...
[[34m  Info  [0m]  - Checking cache: 'postcondition' VC for powerSetSubset @441:60...
[[34m  Info  [0m] Cache miss: 'postcondition' VC for powerSetSubset @441:60...
[[34m  Info  [0m]  - Now solving 'postcondition' VC for powerSetSubset @441:60...
